# gas-analyzer

./: .env.example  .gitignore  .gitmodules  .wasmignore  Cargo.toml  README.md
.github/workflows/: docker-image.yml  publish-wasm.yml  rust-ci.yml  wasm-publish.yml
abis/: SimEnvCallee.json  SimEnvOptsCallee.json  SimEnvOptsStructs.json  SimEnvOptsTestMain.json  SimEnvStructs.json  SimEnvTestMain.json  SimEvnStructs.json  StateChangeHandlerGasEstimator.json
contracts/: README.md
contracts/src/: SimEnvTestContracts.sol  StateChangeHandlerGasEstimator.sol
contracts/test/: StateChangeHandlerGasEstimator.t.sol
crates/anvil/: Cargo.toml
crates/anvil/examples/: tx_extractor_example.rs
crates/anvil/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: constants.rs  encoding.rs  heuristic.rs  lib.rs  trace.rs  types.rs
crates/evmsketch/: Cargo.toml
crates/evmsketch/src/: lib.rs  simple_rpc_db.rs
crates/gas-estimator/: Cargo.toml
crates/gas-estimator/src/: lib.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
crates/wasm/tests/: rpc_integration.rs  rpc_wasm.mjs  web.rs
crates/wasm/tests/common/: mod.rs
docs/: GAS_KILLER_SLASHING_SPEC.md  SP1_REVM_IMPLEMENTATION_SPEC.md
examples/: README.md  tx_extractor_example.rs
examples/frontend/: README.md  frontend-example.html  frontend-example.js
examples/tx-extractor/: run_tx_extractor_example.rs
scripts/: build-wasm.sh
src/: anvil.rs  constants.rs  core.rs  evmsketch.rs  evmsketch_executor.rs  gk.rs  legacy_compare_tests.rs  lib.rs  opcode_tracer.rs  rpc.rs  structs.rs  tx_extractor.rs  wasm.rs
src/core/: constants.rs  encoding.rs  heuristic.rs  mod.rs  trace.rs  types.rs
