[package]
name = "gas-analyzer-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alloy = { version = "1.0.37", features = [
    "sol-types",
    "contract",
    "rpc",
    "rpc-types",
    "node-bindings",
    "json-rpc",
] }
alloy-dyn-abi = "1.0.37"
alloy-eips = "1.0.37"
alloy-provider = { version = "1.0.37", features = ["debug-api"] }
alloy-rpc-types = { version = "1.0.37", features = ["trace"] }
alloy-sol-types = "1.0.37"
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["clock", "serde"] }
clap = "4.5.40"
clap_derive = "4.5.32"
colored = "3.0.0"
csv = "1.3.1"
dotenv = "0.15.0"
env = "1.0.1"
foundry-evm-traces = { git = "https://github.com/foundry-rs/foundry", package = "foundry-evm-traces", branch = "master", optional = true }
opcode-tracer = { git = "https://github.com/BreadchainCoop/sp1-contract-call", branch = "cancun-v1", package = "opcode-tracer", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread"], optional = true }
url = "2.5.4"
hex = "0.4"

# EvmSketch dependencies (Anvil-free execution)
sp1-cc-host-executor = { git = "https://github.com/BreadchainCoop/sp1-contract-call", branch = "cancun-v1", package = "sp1-cc-host-executor", optional = true }
sp1-cc-client-executor = { git = "https://github.com/BreadchainCoop/sp1-contract-call", branch = "cancun-v1", package = "sp1-cc-client-executor", optional = true }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1", optional = true }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1", optional = true }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1", optional = true }
# Must match the version used by sp1-cc-client-executor to avoid type conflicts
revm = { version = "31.0.1", optional = true }

[features]
# Default: EvmSketch-based (Anvil-free)
default = ["evmsketch"]

# Anvil-based implementation (legacy, requires foundry)
anvil = ["foundry-evm-traces", "tokio"]

# EvmSketch-based implementation (Anvil-free)
evmsketch = [
    "sp1-cc-host-executor",
    "sp1-cc-client-executor",
    "reth-primitives",
    "reth-evm",
    "reth-evm-ethereum",
    "revm",
    "opcode-tracer",
    "tokio",
]

# WASM target
wasm = ["opcode-tracer"]

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "Headers",
] }
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[build-dependencies]
serde_json = "1.0"

[[example]]
name = "tx_extractor_example"
path = "examples/tx_extractor_example.rs"
