[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/gas-estimator",
    "crates/rpc",
    "crates/anvil",
    "crates/evmsketch",
    "crates/cli",
    "crates/wasm",
]
default-members = [
    "crates/core",
    "crates/gas-estimator",
    "crates/rpc",
    "crates/evmsketch",
    "crates/cli",
]
