[package]
name = "gas-analyzer-anvil"
version = "0.1.0"
edition = "2024"

[dependencies]
gas-analyzer-core = { path = "../core" }
gas-analyzer-rpc = { path = "../rpc" }
alloy = { version = "1.0.37", features = ["sol-types", "contract", "rpc", "rpc-types", "node-bindings", "json-rpc"] }
alloy-dyn-abi = "1.0.37"
alloy-provider = { version = "1.0.37", features = ["debug-api"] }
alloy-rpc-types = { version = "1.0.37", features = ["trace"] }
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["clock", "serde"] }
foundry-evm-traces = { git = "https://github.com/foundry-rs/foundry", package = "foundry-evm-traces", branch = "master" }
serde = { version = "1.0.219", features = ["derive"] }
url = "2.5.4"
hex = "0.4"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
dotenv = "0.15.0"
csv = "1.3.1"

[build-dependencies]
serde_json = "1.0"

[[example]]
name = "tx_extractor_example"
path = "examples/tx_extractor_example.rs"
