[package]
name = "gas-analyzer-evmsketch"
version = "0.1.0"
edition = "2024"

[dependencies]
gas-analyzer-core = { path = "../core" }
gas-analyzer-rpc = { path = "../rpc" }
gas-analyzer-estimator = { path = "../gas-estimator" }
alloy = { version = "1.0.37", features = ["rpc", "rpc-types"] }
alloy-eips = "1.0.37"
alloy-provider = { version = "1.0.37", features = ["debug-api"] }
anyhow = "1.0.98"
url = "2.5.4"
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
revm = { version = "31.0.1" }
sp1-cc-host-executor = { git = "https://github.com/BreadchainCoop/sp1-contract-call", branch = "cancun-v1", package = "sp1-cc-host-executor" }
sp1-cc-client-executor = { git = "https://github.com/BreadchainCoop/sp1-contract-call", branch = "cancun-v1", package = "sp1-cc-client-executor" }
