[package]
name = "gas-analyzer-estimator"
version = "0.1.0"
edition = "2024"

[dependencies]
gas-analyzer-core = { path = "../core" }
alloy-primitives = "1.0.37"
alloy-dyn-abi = "1.0.37"
hex = "0.4"
anyhow = "1.0.98"
serde_json = "1.0"
revm = { version = "31.0.1", default-features = false, features = [
    "std",
    "optional_balance_check",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "optional_fee_charge",
] }

# For WASM builds, the consumer must enable getrandom/js.
# This feature enables it from this crate for testing.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
