[package]
name = "gas-analyzer-rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
gas-analyzer-core = { path = "../core" }
gas-analyzer-estimator = { path = "../gas-estimator" }
alloy = { version = "1.0.37", features = ["rpc", "rpc-types"] }
alloy-eips = "1.0.37"
alloy-provider = { version = "1.0.37", features = ["debug-api"] }
alloy-rpc-types = "1.0.37"
revm = { version = "31.0.1", default-features = false, features = ["std"] }
anyhow = "1.0.98"
