[package]
name = "gas-killer-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gas-analyzer-core = { path = "../core" }
gas-analyzer-estimator = { path = "../gas-estimator" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
revm = { version = "31.0.1", default-features = false, features = ["std"] }
alloy-primitives = "1.0.37"
alloy-rpc-types = { version = "1.0.37", features = ["trace"] }
hex = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }

[profile.release]
opt-level = "z"
lto = true
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
